20250707 차량일지 추가

--- a/BlazorApp/Layout/NavMenu.razor
+++ b/BlazorApp/Layout/NavMenu.razor
@@ -14,6 +14,14 @@
                     대시보드
                 </MudNavLink>
 
+                <!-- 차량일지 -->
+                <MudNavLink Href="/vehicles"
+                            Match="NavLinkMatch.Prefix"
+                            Icon="@Icons.Material.Filled.ElectricCar"
+                            Class="nav-item">
+                    차량일지
+                </MudNavLink>
+
                 <!-- 파트너카드 -->
                 <MudNavLink Href="/partnercard"
                             Match="NavLinkMatch.Prefix"
