보안 및 안정화 작업

--- a/BlazorApp/Layout/MainLayout.razor
+++ b/BlazorApp/Layout/MainLayout.razor
@@ -82,7 +82,7 @@
                           ObjectFit="ObjectFit.Contain"
                           Class="mr-3" />
 
-                <MudText Typo="Typo.h6" Color="Color.Primary">동해렌즈</MudText>
+                <MudText Typo="Typo.h6" Color="Color.Primary">토카이렌즈</MudText>
             </div>
             <MudDivider />
         </div>
