--- a/BlazorApp/_Imports.razor
+++ b/BlazorApp/_Imports.razor
@@ -25,5 +25,8 @@
 
 @using BlazorApp.Services.Common
 @using BlazorApp.Services.Auth
+@using BlazorApp.Services.PartnerCard
+
+@using BlazorApp.Models
 
 @using Blazored.LocalStorage
