--- a/BlazorApp/Pages/PartnerCard/Components/OrdersChart.razor
+++ b/BlazorApp/Pages/PartnerCard/Components/OrdersChart.razor
@@ -51,6 +51,10 @@
 
         // chart Option
         _options.YAxisTicks = 100000;
+        _options.YAxisFormat = "N0";
+        _options.YAxisLines = true;
+        _options.ValueFormatString = "N0";
+        
 
         StateHasChanged();
     }
