보안 사항 수정

--- a/BlazorApp/Pages/PartnerCard/Components/OrdersChart.razor
+++ b/BlazorApp/Pages/PartnerCard/Components/OrdersChart.razor
@@ -46,6 +46,7 @@
                     Convert.ToDouble(order.AM_MON12),
                 },
                 ShowDataMarkers = true,
+                DataMarkerTooltipYValueFormat = "N0",
             }).ToList();
         }
 
